--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 
 # Ignore Gradle build output directory
 build
+
+.nx/installation
+.nx/cache
+.nx/workspace-data
+
+
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
